finished all checkpoints but have to workout layout issues

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,5 +1,6 @@
 $gutter: 0.6rem;
 $brand-white: #fff;
+$brand-black: #000000;
 $brand-primary: #f45800;
 $brand-gray: #686868;
 $brand-light-gray: #eaeaea;
